--- a/tus_nodejs/package.json
+++ b/tus_nodejs/package.json
@@ -13,8 +13,15 @@
   "author": "rohitkarki804@gmail.com",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^5.3.3",
     "@types/node": "^20.11.20",
-    "ts-node": "^10.9.2"
-  }
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "module-alias": "^2.2.3"
+  },
+  "_moduleAliases": {
+    "@root"      : ".",
+    "@tus/utils"      : "src/utils"
+}
 }
