--- a/tus_nodejs/tsconfig.json
+++ b/tus_nodejs/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
+    "baseUrl" : "./src",
+    "paths": {
+      "@tus/utils/*": ["./utils/*"],
+    },
     "target": "es6",
     "module": "ES6",
     "esModuleInterop": true,
@@ -10,5 +14,5 @@
     "allowJs": true,
     "outDir": "dist",
     "rootDir": "src",
-  }
+  },
 }
